// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkCalendar should render correctly 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'multiple'} 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="multiple"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'range'} 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="range"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'single'} 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with androidFooterView 1`] = `
<RCTBPKCalendar
  androidFooterView={
    Object {
      "__type": "highlightedDays",
      "days": Array [
        Object {
          "date": 1576627200000,
          "description": "Test day",
        },
      ],
    }
  }
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with arbitrary props 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
  testID="123"
/>
`;

exports[`iOS BpkCalendar should render correctly with both minDate and maxDate 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={1589846400000}
  minDate={1558224000000}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with color buckets 1`] = `
<RCTBPKCalendar
  colorBuckets={
    Array [
      Object {
        "color": 4291882732,
        "days": Object {
          "dates": Array [
            1576627200000,
          ],
          "type": "before",
        },
        "textStyle": undefined,
      },
      Object {
        "color": 4291904347,
        "days": Object {
          "dates": Array [
            1576627200000,
          ],
          "type": "after",
        },
        "textStyle": "dark",
      },
    ]
  }
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with custom style 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`iOS BpkCalendar should render correctly with disabled dates 1`] = `
<RCTBPKCalendar
  disabledDates={
    Object {
      "dates": Array [
        1576454400000,
      ],
      "type": "after",
    }
  }
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with maxDate 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={1589846400000}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with minDate 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={1558224000000}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "multiple" and selected dates 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      1558224000000,
      1558396800000,
      1559088000000,
    ]
  }
  selectionType="multiple"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "range" and selected dates 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      1558224000000,
      1558396800000,
    ]
  }
  selectionType="range"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "single" and selected dates 1`] = `
<RCTBPKCalendar
  disabledDates={null}
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      1558224000000,
    ]
  }
  selectionType="single"
  style={null}
/>
`;
